--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.1</version>
+        </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
