--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=#{ 'jdbc:postgresql://' + @dbUrl.getHost() + ':' + @dbUrl.getPort() + @dbUrl.getPath() + '?sslmode=require' }
-jdbc.user=#{ @dbUrl.getUserInfo().split(':')[0] }
-jdbc.password=#{ @dbUrl.getUserInfo().split(':')[1] }
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/accounts?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc.user=root
