--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-jdbc.driverClassName=org.apache.commons.dbcp.BasicDataSource
-jdbc.url=#{ jdbc:postgresql:// + @dbUrl.getHost() + : + @dbUrl.getPort() + @dbUrl.getPath() + ?sslmode=require }
-jdbc.user=#{ @dbUrl.getUserInfo().split(':')[0] }
-jdbc.password=#{ @dbUrl.getUserInfo().split(':')[1] }
+jdbc.driverClassName=org.postgresql.Driver
+jdbc.url=jdbc:postgresql:// + @dbUrl.getHost() + : + @dbUrl.getPort() + @dbUrl.getPath() + ?sslmode=require 
+jdbc.user=@dbUrl.getUserInfo().split(':')[0] 
+jdbc.password=@dbUrl.getUserInfo().split(':')[1] 
