--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,5 +1,5 @@
 NotEmpty=Ce champ est requis.
 Size.userForm.username=Le nom d'utilisateur doit comporter entre 6 et 32 caract\u00e8res.
-Duplicate.userForm.username=Ce nom d'utilisateur est d\u00e9j\u00e0 utilis\u00e9; r\u00e9essayez avec un autre.
+Duplicate.userForm.username=Ce nom d'utilisateur est pris; choisissez un autre.
 Size.userForm.password=Le mot de passe doit contenir au moins 8 caract\u00e8res.
-Diff.userForm.passwordConfirm=Les mots de passes ne correspondent pas; r\u00e9essayez \u00e0 nouveau.
+Diff.userForm.passwordConfirm=Les mots de passe ne correspondent pas.
